tests/fixtures/valid/modules/string_lib.airl
(defn greet :pub :verify checked
  :sig [(name : String) -> String]
  :requires [(valid name)]
  :ensures [(valid result)]
  :body (str "Hello, " name "!"))
