tests/fixtures/type_errors/contract_undeclared_var.airl
;; ERROR: undefined
(defn bad-ref
  :sig [(x : i32) -> i32]
  :ensures [(> result y)]
  :body x)
